manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gatsby-app-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app.kubernetes.io/name: gatsby-app
